* Curve: the profile success box should not break the layout (profile.css) [Bug 3533]
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@8674 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/curve/css/profile.css
+++ b/Themes/curve/css/profile.css
@@ -150,7 +150,7 @@ dl
 /* Simple feedback messages */
 div#profile_error, div#profile_success
 {
-	margin: 1em 0;
+	margin: 0 0 1em 0;
 	padding: 1em 2em;
 	border: 1px solid;
 }
